--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000" />
   <title>Kaanygit</title>
+  <link rel='icon' href='./icon.ico'/>
 </head>
 <body>
   <div className='container'>
